# xelerate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  exec.sh  main.c  setup.sh
